--- a/PureToneAudiometer/App.xaml
+++ b/PureToneAudiometer/App.xaml
@@ -2,12 +2,21 @@
     x:Class="PureToneAudiometer.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:pureToneAudiometer="clr-namespace:PureToneAudiometer">
+    xmlns:pureToneAudiometer="clr-namespace:PureToneAudiometer"
+    xmlns:micro="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro">
 
     <!--Application Resources-->
     <Application.Resources>
-        <local:LocalizedStrings xmlns:local="clr-namespace:PureToneAudiometer" x:Key="LocalizedStrings"/>
-        <pureToneAudiometer:AppBootstrapper x:Key="bootstrapper"/>
+        <ResourceDictionary>
+            <local:LocalizedStrings xmlns:local="clr-namespace:PureToneAudiometer" x:Key="LocalizedStrings"/>
+            <pureToneAudiometer:AppBootstrapper x:Key="bootstrapper"/>
+            <micro:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
+            <pureToneAudiometer:TriggeredBooleanToVisibilityConverter x:Key="InvertedVisibilityConverter" Inverted="True"/>
+        
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 
 </Application>
