--- a/PureToneAudiometer/Views/Presets/SavedFilesView.xaml
+++ b/PureToneAudiometer/Views/Presets/SavedFilesView.xaml
@@ -32,12 +32,10 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <!--<TextBlock Text="Saved files view!" HorizontalAlignment="Center" VerticalAlignment="Center"/>-->
-            <phone:LongListSelector 
-                LayoutMode="List"
-                IsGroupingEnabled="False"
+            <ListBox 
+                micro:Message.Attach="[Event SelectionChanged] = [Action SelectionChanged($eventArgs)]"
                 ItemsSource="{Binding SavedFileList}">
-                <phone:LongListSelector.ItemTemplate>
+                <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid>
                             <toolkit:ContextMenuService.ContextMenu>
@@ -53,8 +51,8 @@
                             </StackPanel>
                         </Grid>
                     </DataTemplate>
-                </phone:LongListSelector.ItemTemplate>
-            </phone:LongListSelector>
+                </ListBox.ItemTemplate>
+            </ListBox>
         </Grid>
     </Grid>
 
