--- a/PureToneAudiometer/Views/PresetsPageView.xaml
+++ b/PureToneAudiometer/Views/PresetsPageView.xaml
@@ -6,7 +6,6 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     xmlns:bindableAppBar="clr-namespace:Caliburn.Micro.BindableAppBar;assembly=Caliburn.Micro.BindableAppBar"
     xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
     mc:Ignorable="d"
@@ -21,12 +20,15 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <!--Pivot Control-->
-        <phone:Pivot Title="Pure Tone Audiometer" cal:Message.Attach="[Event LoadedPivotItem]=[Action LoadedPivotItem($eventArgs)]">
+        <phone:Pivot 
+            SelectedIndex="{Binding Index, Mode=TwoWay}"
+            Title="Pure Tone Audiometer"
+            cal:Message.Attach="[Event LoadedPivotItem]=[Action LoadedPivotItem($eventArgs)]">
             <!--Pivot item one-->
-            <phone:PivotItem Name="PresetViewModel" Header="preset"/>
+            <phone:PivotItem Name="PresetViewModel" Header="current"/>
 
             <!--Pivot item two-->
-            <phone:PivotItem Name="SavedPresetsViewModel" Header="saved files"/>
+            <phone:PivotItem Name="SavedPresetsViewModel" Header="saved"/>
         </phone:Pivot>
 
         <bindableAppBar:BindableAppBar 
