--- a/PureToneAudiometer/Views/SettingsPageView.xaml
+++ b/PureToneAudiometer/Views/SettingsPageView.xaml
@@ -1,19 +1,18 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="PureToneAudiometer.Views.StartPageView"
+    x:Class="PureToneAudiometer.Views.SettingsPageView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:micro="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
     xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
+    SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d"
-    toolkit:TiltEffect.IsTiltEnabled="True"
+    
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
@@ -26,25 +25,18 @@
         <!--TitlePanel contains the name of the application and page title-->
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="start" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="settings" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <ListBox ItemsSource="{Binding NavigationItems}"
-                     SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"
-                     micro:Message.Attach="[Event SelectionChanged] = [Action SelectionChanged($eventArgs)]">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock FontWeight="Bold" Text="{Binding Glyph}" FontFamily="Segoe UI Symbol" FontSize="32" Margin="3,3,7,3" VerticalAlignment="Center"/>
-                                <TextBlock FontWeight="Light" Text="{Binding NavigationName}" FontSize="38" VerticalAlignment="Center"/>
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+            <StackPanel Orientation="Vertical">
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Max volume:" VerticalAlignment="Center"/>
+                    <TextBox Text="{Binding MaxVolume, Mode=TwoWay}" MinWidth="100" VerticalAlignment="Center"/>
+                    <TextBlock Text="[dB]" VerticalAlignment="Center"/>
+                </StackPanel>
+            </StackPanel>
         </Grid>
     </Grid>
 
