Added the main page and the 'hearing test' view. Tied up the navigation.
Added the IXmlItemsFileManager.cs to facilitate serializing/deserializing
item lists to/from XML file.

--- a/PureToneAudiometer/Views/PresetsPageView.xaml
+++ b/PureToneAudiometer/Views/PresetsPageView.xaml
@@ -36,6 +36,10 @@
             Name="AppBar" 
             BackgroundColor="White">
             <bindableAppBar:BindableAppBarButton
+                Name="SaveItems"
+                Text="Save"
+                IconUri="{Binding SaveIcon}"/>
+            <bindableAppBar:BindableAppBarButton
                     Name="SelectItems"
                     Text="Select"
                     IconUri="{Binding SelectIcon}"
@@ -49,12 +53,6 @@
                 />
             <bindableAppBar:BindableAppBarMenuItem Name="NewPreset"
                                                    Text="New"/>
-            <bindableAppBar:BindableAppBarMenuItem Name="SaveItems"
-                                                   Text="Save"
-                                                   />
-            <bindableAppBar:BindableAppBarMenuItem Name="UseCurrent"
-                                                   Text="Use current"/>
-            
         </bindableAppBar:BindableAppBar>
     </Grid>
     
