--- a/PureToneAudiometer/Views/Core/ChannelSelectionPageView.xaml
+++ b/PureToneAudiometer/Views/Core/ChannelSelectionPageView.xaml
@@ -1,19 +1,16 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="PureToneAudiometer.Views.StartPageView"
+    x:Class="PureToneAudiometer.Views.Core.ChannelSelectionPageView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:micro="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
-    xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
     mc:Ignorable="d"
-    toolkit:TiltEffect.IsTiltEnabled="True"
     shell:SystemTray.IsVisible="True">
 
     <!--LayoutRoot is the root grid where all page content is placed-->
@@ -22,29 +19,35 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
+<!--
 
-        <!--TitlePanel contains the name of the application and page title-->
+        ~1~TitlePanel contains the name of the application and page title@1@
         <StackPanel Grid.Row="0" Margin="12,17,0,28">
             <TextBlock Text="MY APPLICATION" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock Text="start" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+            <TextBlock Text="page name" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
         </StackPanel>
+-->
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
-            <ListBox ItemsSource="{Binding NavigationItems}"
-                     SelectedIndex="{Binding SelectedIndex, Mode=TwoWay}"
-                     micro:Message.Attach="[Event SelectionChanged] = [Action SelectionChanged($eventArgs)]">
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Grid>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock FontWeight="Bold" Text="{Binding Glyph}" FontFamily="Segoe UI Symbol" FontSize="32" Margin="3,3,7,3" VerticalAlignment="Center"/>
-                                <TextBlock FontWeight="Light" Text="{Binding NavigationName}" FontSize="38" VerticalAlignment="Center"/>
-                            </StackPanel>
-                        </Grid>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-            </ListBox>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="2*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Grid.Column="0" 
+                       Grid.ColumnSpan="2" 
+                       Text="Select channel to start with" 
+                       Style="{StaticResource PhoneTextTitle2Style}"
+                       TextWrapping="Wrap"
+                       VerticalAlignment="Bottom" 
+                       HorizontalAlignment="Center"/>
+            <Button Name="LeftEar" Grid.Row="1" Grid.Column="0" Content="Left" MaxHeight="300" />
+            <Button Name="RightEar" Grid.Row="1" Grid.Column="1" Content="Right" MaxHeight="300"/>
+            
         </Grid>
     </Grid>
 
