--- a/PureToneAudiometer/Views/Core/HostPageView.xaml
+++ b/PureToneAudiometer/Views/Core/HostPageView.xaml
@@ -1,28 +1,22 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="PureToneAudiometer.Views.MainPageView"
+    x:Class="PureToneAudiometer.Views.Core.HostPageView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="PortraitOrLandscape"  Orientation="Portrait"
-    shell:SystemTray.IsVisible="False">
+    SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
+    mc:Ignorable="d"
+    shell:SystemTray.IsVisible="True">
 
-    <!--LayoutRoot contains the root grid where all other page content is placed-->
-    <Grid x:Name="LayoutRoot">
-        <phone:Panorama Title="audiometer">
-
-            <!--Panorama item one-->
-            <phone:PanoramaItem Name="MainMenu" Header="menu"/>
-
-            <!--Panorama item two-->
-            <phone:PanoramaItem Name="Recent" Header="recent"/>
-        </phone:Panorama>
+    <!--LayoutRoot is the root grid where all page content is placed-->
+    <Grid x:Name="LayoutRoot" Background="Transparent">
+        
+        <ContentControl Name="HearingTestViewModel"/>
     </Grid>
 
 </phone:PhoneApplicationPage>
