--- a/PureToneAudiometer/Views/Presets/AddItemView.xaml
+++ b/PureToneAudiometer/Views/Presets/AddItemView.xaml
@@ -12,7 +12,7 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     micro:Bind.Model="AddItemViewModel"
-    SupportedOrientations="Portrait" Orientation="Portrait"
+    SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
 
