--- a/PureToneAudiometer/Views/Presets/SavedFilesView.xaml
+++ b/PureToneAudiometer/Views/Presets/SavedFilesView.xaml
@@ -11,7 +11,7 @@
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    SupportedOrientations="Portrait" Orientation="Portrait"
+    SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
     mc:Ignorable="d"
     toolkit:TiltEffect.IsTiltEnabled="True"
     shell:SystemTray.IsVisible="True">
@@ -29,6 +29,8 @@
                             <toolkit:ContextMenuService.ContextMenu>
                                 <toolkit:ContextMenu IsFadeEnabled="True"
                                                      IsZoomEnabled="True">
+                                    <toolkit:MenuItem Header="Use"
+                                                      micro:Message.Attach="[Event Click] = [Action UsePreset]"/>
                                     <toolkit:MenuItem Header="Delete"
                                                       micro:Message.Attach="[Event Click] = [Action ScheduleForDeletion]"/>
                                 </toolkit:ContextMenu>
