--- a/PureToneAudiometer/Views/Core/HostPageView.xaml
+++ b/PureToneAudiometer/Views/Core/HostPageView.xaml
@@ -6,10 +6,13 @@
     xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:micro="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
+    
+    micro:Message.Attach="[Event BackKeyPress] = [Action BackKeyPressed($eventArgs)]"
     mc:Ignorable="d"
     shell:SystemTray.IsVisible="True">
 
