--- a/PureToneAudiometer/Views/Presets/AddItemView.xaml
+++ b/PureToneAudiometer/Views/Presets/AddItemView.xaml
@@ -31,26 +31,26 @@
             </Grid.RowDefinitions>
             <TextBlock Text="Frequency" VerticalAlignment="Center"/>
             <StackPanel Grid.Column="1" Grid.Row="0" Orientation="Horizontal">
-                <TextBox Name="Frequency" MinWidth="100" MaxWidth="150" TextWrapping="Wrap"/>
+                <TextBox InputScope="Number" Name="Frequency" MinWidth="100" MaxWidth="150" TextWrapping="Wrap"/>
                 <TextBlock Text="[Hz]" VerticalAlignment="Center"/>
             </StackPanel>
             
             <TextBlock Text="Tone duration" VerticalAlignment="Center" Grid.Row="1"/>
             <StackPanel Grid.Column="1" Grid.Row="1" Orientation="Horizontal">
-                <TextBox Name="ToneDuration" MinWidth="100" MaxWidth="150" TextWrapping="Wrap"/>
+                <TextBox InputScope="Number"  Name="ToneDuration" MinWidth="100" MaxWidth="150" TextWrapping="Wrap"/>
                 <TextBlock Text="[msec]" VerticalAlignment="Center"/>
             </StackPanel>
 
             <TextBlock Text="Minimum pause duration" Grid.Row="2" VerticalAlignment="Center"/>
             <StackPanel Grid.Column="1" Grid.Row="2" Orientation="Horizontal">
-                <TextBox Name="MinimumPauseDuration" MinWidth="100" MaxWidth="150" TextWrapping="Wrap"/>
+                <TextBox InputScope="Number" Name="MinimumPauseDuration" MinWidth="100" MaxWidth="150" TextWrapping="Wrap"/>
                 <TextBlock Text="[msec]" VerticalAlignment="Center"/>
             </StackPanel>
 
             <TextBlock Text="Maximum pause duration" Grid.Row="3" VerticalAlignment="Center"/>
 
             <StackPanel Grid.Column="1" Grid.Row="3" Orientation="Horizontal">
-                <TextBox Name="MaximumPauseDuration" MinWidth="100" MaxWidth="150" TextWrapping="Wrap"/>
+                <TextBox InputScope="Number" Name="MaximumPauseDuration" MinWidth="100" MaxWidth="150" TextWrapping="Wrap"/>
                 <TextBlock Text="[msec]" VerticalAlignment="Center"/>
             </StackPanel>
         </Grid>
