--- a/PureToneAudiometer/Resources/Styles.xaml
+++ b/PureToneAudiometer/Resources/Styles.xaml
@@ -1,9 +1,58 @@
 ﻿<ResourceDictionary
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib">
+        xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d">
 
-    <sys:String x:Key="AppName">My App Name</sys:String>
+	<sys:String x:Key="AppName">My App Name</sys:String>
     <!-- etc. -->
+    
+    <Style TargetType="ButtonBase" x:Key="GlyphButtonStyle">
+        <Setter Property="FontFamily" Value="Segoe UI Symbol"/>
+        <Setter Property="FontSize" Value="24"/>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="Width" Value="40"/>
+    </Style>
+    
+
+	<ControlTemplate TargetType="ButtonBase" x:Key="RoundButton">
+		<Grid Background="Transparent">
+			<VisualStateManager.VisualStateGroups>
+				<VisualStateGroup x:Name="CommonStates">
+					<VisualState x:Name="Pressed">
+						<Storyboard>
+							<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="ellipse" d:IsOptimized="True"/>
+							<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill)" Storyboard.TargetName="ellipse">
+								<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneAccentBrush}"/>
+							</ObjectAnimationUsingKeyFrames>
+						</Storyboard>
+					</VisualState>
+					<VisualState x:Name="Normal">
+						<Storyboard>
+							<DoubleAnimation Duration="0" To="1" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="ellipse" d:IsOptimized="True"/>
+						</Storyboard>
+					</VisualState>
+					<VisualState x:Name="Disabled">
+						<Storyboard>
+							<DoubleAnimation Duration="0" To="0.5" Storyboard.TargetProperty="(UIElement.Opacity)" Storyboard.TargetName="ellipse" d:IsOptimized="True"/>
+							<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Stroke)" Storyboard.TargetName="ellipse">
+								<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneDisabledBrush}"/>
+							</ObjectAnimationUsingKeyFrames>
+							<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(Shape.Fill)" Storyboard.TargetName="ellipse">
+								<DiscreteObjectKeyFrame KeyTime="0" Value="{StaticResource PhoneDisabledBrush}"/>
+							</ObjectAnimationUsingKeyFrames>							
+						</Storyboard>
+					</VisualState>
+					<VisualState x:Name="MouseOver"/>
+				</VisualStateGroup>
+			</VisualStateManager.VisualStateGroups>
+            
+			<Ellipse x:Name="ellipse" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Stroke="{StaticResource PhoneForegroundBrush}" StrokeThickness="2"/>
+            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+		</Grid>
+	</ControlTemplate>
+
+    <Style TargetType="ButtonBase" BasedOn="{StaticResource GlyphButtonStyle}" x:Key="RoundGlyphButton">
+        <Setter Property="Template" Value="{StaticResource RoundButton}"/>
+    </Style>
 
 </ResourceDictionary>
