--- a/PureToneAudiometer/Resources/Styles.xaml
+++ b/PureToneAudiometer/Resources/Styles.xaml
@@ -53,6 +53,9 @@
 
     <Style TargetType="ButtonBase" BasedOn="{StaticResource GlyphButtonStyle}" x:Key="RoundGlyphButton">
         <Setter Property="Template" Value="{StaticResource RoundButton}"/>
+        <Setter Property="Height" Value="60"/>
+        <Setter Property="Width" Value="60"/>
+        <Setter Property="FontSize" Value="36"/>
     </Style>
 
 </ResourceDictionary>
