--- a/PureToneAudiometer/Views/Core/HearingTestView.xaml
+++ b/PureToneAudiometer/Views/Core/HearingTestView.xaml
@@ -39,14 +39,19 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <StackPanel Orientation="Vertical">
+            <StackPanel Orientation="Vertical"
+                        Margin="0,0,0,20">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,0,0,10">
                     <TextBlock Text="Preset:" Margin="0,0,3,0"/>
                     <TextBlock Name="PresetName"/>
                 </StackPanel>
-                <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch">
+                <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" Margin="0,10,0,10">
                     <TextBlock Text="Progress" Style="{StaticResource PhoneTextSmallStyle}" HorizontalAlignment="Center"/>
-                    <ProgressBar x:Name="ProgressBar" Maximum="100" Value="{Binding ProgressValue, Mode=TwoWay}"/>
+                    <ProgressBar x:Name="ProgressBar"
+                                 Maximum="100" 
+                                 Height="10"
+                                 Value="{Binding ProgressValue, Mode=TwoWay}" 
+                                 Margin="0,10,0,15"/>
                 </StackPanel>
                 <StackPanel>
                 <Grid>
@@ -65,43 +70,62 @@
                     </Grid>
                 </StackPanel>
             </StackPanel>
-            
-            <StackPanel Orientation="Horizontal" 
-                        HorizontalAlignment="Center"
-                        Grid.Row="1"
-                        Margin="0,10,0,20"
-                        >
-                <Button Name="PreviousFrequency" Margin="0,0,20,0" Style="{StaticResource RoundGlyphButton}">&#xE0E2;</Button>
-                <TextBlock Name="CurrentFrequency" Style="{StaticResource PhoneTextLargeStyle}"/>
-                <TextBlock Text="Hz" Style="{StaticResource PhoneTextLargeStyle}"/>
-                <Button Name="NextFrequency" Margin="20,0,0,0" Style="{StaticResource RoundGlyphButton}">&#xE0E3;</Button>
+            <Grid Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+          
+                <Button Grid.Row="0" 
+                        Grid.Column="0"
+                        Name="PreviousFrequency" 
+                        
+                        Style="{StaticResource RoundGlyphButton}">&#xE0E2;</Button>
+                <StackPanel Grid.Row="0" 
+                            Grid.Column="1"
+                            HorizontalAlignment="Center"
+                            Margin="0,20,0,20"
+                            Orientation="Horizontal">
+                <TextBlock Name="CurrentFrequency" 
+                           Style="{StaticResource PhoneTextLargeStyle}"/>
+                <TextBlock Text="Hz" 
+                           Style="{StaticResource PhoneTextLargeStyle}"/>
+                </StackPanel>
+                <Button Grid.Row="0"
+                        Grid.Column="2"
+                        Name="NextFrequency" 
+                        Style="{StaticResource RoundGlyphButton}">&#xE0E3;</Button>
 
-            </StackPanel>
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Center"
-                        Margin="0,5,0,20"
-                        Grid.Row="2">
-                <RepeatButton Name="DecreaseVolume" Margin="20,0,0,0" Style="{StaticResource RoundGlyphButton}">&#xE0E5;</RepeatButton>
-                <TextBlock Name="CurrentVolume" Style="{StaticResource PhoneTextLargeStyle}"/>
-                <TextBlock Text="dB" Style="{StaticResource PhoneTextLargeStyle}"/>
-                <RepeatButton Name="IncreaseVolume" Margin="0,0,20,0" Style="{StaticResource RoundGlyphButton}">&#xE0E4;</RepeatButton>
-            </StackPanel>
-       <!--     <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Name="DecreaseVolume" Content="-5 dB"/>
-                <Button Name="IncreaseVolume" Content="+5 dB"/>
-            </StackPanel>-->
+              
+                
+                <RepeatButton Grid.Row="1"
+                              Grid.Column="0"
+                              Name="DecreaseVolume" 
+                              Style="{StaticResource RoundGlyphButton}">&#xE0E5;</RepeatButton>
+                <StackPanel Grid.Row="1"
+                            Grid.Column="1"
+                            Orientation="Horizontal"
+                            Margin="0,20,0,20"
+                            HorizontalAlignment="Center">
+                    <TextBlock Name="CurrentVolume" 
+                               Style="{StaticResource PhoneTextLargeStyle}"/>
+                    <TextBlock Text="dB" 
+                               Style="{StaticResource PhoneTextLargeStyle}"/>
+                </StackPanel>
+                <RepeatButton Name="IncreaseVolume" 
+                              Grid.Row="1"
+                              Grid.Column="2"
+                              Style="{StaticResource RoundGlyphButton}">&#xE0E4;</RepeatButton>
+            </Grid>
             <StackPanel Grid.Row="4" HorizontalAlignment="Center" Margin="20">
                 <StackPanel Orientation="Vertical">
-                    <Button Name="Ok">
-                        <Button.Content>
-                            <Grid>
-                                <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="" FontFamily="Segoe UI Symbol" Margin="0,0,4,0"/>
-                                    <TextBlock Text="OK"/>
-                                </StackPanel>
-                            </Grid>
-                        </Button.Content>
-                    </Button>
+                    <Button Name="Ok" Content="OK"/>
+                        
                 </StackPanel>
             </StackPanel>
             <StackPanel Grid.Row="5" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -109,7 +133,7 @@
                 <Button Name="GoToResults" Grid.Row="5" Content="Finish"/>
             </StackPanel>
             
-            <MediaElement Name="Media" Volume="1" AutoPlay="False"/>
+            <MediaElement Name="Media" Volume="1" AutoPlay="True"/>
         </Grid>
     </Grid>
 
