--- a/PureToneAudiometer/Views/Results/BrowserPageView.xaml
+++ b/PureToneAudiometer/Views/Results/BrowserPageView.xaml
@@ -43,14 +43,23 @@
                         <Grid Margin="0,5,0,5" micro:Message.Attach="[Event Tap] = [Action Tapped]">
                         <Border BorderBrush="{StaticResource PhoneForegroundBrush}">
                             <StackPanel Orientation="Vertical">
-                                <TextBlock TextWrapping="Wrap" Text="{Binding FileName}" Style="{StaticResource PhoneTextTitle3Style}"/>
+                                <TextBlock TextWrapping="Wrap" 
+                                           Text="{Binding Description}" 
+                                           Style="{StaticResource PhoneTextLargeStyle}"/>
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Modified" FontWeight="ExtraLight" />
-                                    <TextBlock TextWrapping="Wrap" Text="{Binding LastChangedDate}" FontSize="18" FontWeight="ExtraLight" Margin="10"/>
+                                    <TextBlock Text="Modified"
+                                               Width="100"
+                                               FontWeight="Light" />
+                                    <TextBlock TextWrapping="Wrap" Text="{Binding LastChangedDate}" 
+                                               Style="{StaticResource PhoneTextSmallStyle}"/>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
-                                    <TextBlock Text="Created" FontWeight="ExtraLight"/>
-                                    <TextBlock TextWrapping="Wrap" Text="{Binding CreationDate}" FontSize="18" FontWeight="ExtraLight" Margin="10"/>
+                                    <TextBlock Text="Created" 
+                                               Width="100"
+                                               FontWeight="Light"/>
+                                    <TextBlock TextWrapping="Wrap" 
+                                               Text="{Binding CreationDate}"
+                                               Style="{StaticResource PhoneTextSmallStyle}"/>
                                 </StackPanel>
                             </StackPanel>
                         </Border>
