--- a/PureToneAudiometer/Views/Results/SaveResultView.xaml
+++ b/PureToneAudiometer/Views/Results/SaveResultView.xaml
@@ -1,5 +1,5 @@
 ﻿<phone:PhoneApplicationPage
-    x:Class="PureToneAudiometer.Views.MainPageView"
+    x:Class="PureToneAudiometer.Views.Results.SaveResultView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
@@ -7,24 +7,19 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:micro="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro"
-    mc:Ignorable="d"
     FontFamily="{StaticResource PhoneFontFamilyNormal}"
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
-    micro:Message.Attach="[Event BackKeyPress] = [Action BackKeyPressed($eventArgs)]"
-    SupportedOrientations="PortraitOrLandscape"  Orientation="Portrait"
-    shell:SystemTray.IsVisible="False">
+    SupportedOrientations="PortraitOrLandscape" Orientation="Portrait"
+    micro:Bind.Model="SaveResultViewModel"
+    mc:Ignorable="d"
+    shell:SystemTray.IsVisible="True">
 
-    <!--LayoutRoot contains the root grid where all other page content is placed-->
-    <Grid x:Name="LayoutRoot">
-        <phone:Panorama Title="audiometer">
-
-            <!--Panorama item one-->
-            <phone:PanoramaItem Name="MainMenu" Header="menu"/>
-
-            <!--Panorama item two-->
-            <phone:PanoramaItem Name="Recent" Header="recent"/>
-        </phone:Panorama>
+    <!--LayoutRoot is the root grid where all page content is placed-->
+    <Grid x:Name="LayoutRoot" Background="Transparent">
+        <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,50,12,0">
+            <TextBox Name="Description"/>
+        </Grid>
     </Grid>
 
 </phone:PhoneApplicationPage>
