--- a/PureToneAudiometer/Resources/Styles.xaml
+++ b/PureToneAudiometer/Resources/Styles.xaml
@@ -1,11 +1,12 @@
 ﻿<ResourceDictionary
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d">
+        xmlns:sys="clr-namespace:System;assembly=mscorlib" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:pureToneAudiometer="clr-namespace:PureToneAudiometer" mc:Ignorable="d">
 
 	<sys:String x:Key="AppName">My App Name</sys:String>
     <!-- etc. -->
-    
+    <pureToneAudiometer:StringFormatConverter x:Key="StringFormatConverter"/>
     <Style TargetType="ButtonBase" x:Key="GlyphButtonStyle">
         <Setter Property="FontFamily" Value="Segoe UI Symbol"/>
         <Setter Property="FontSize" Value="24"/>
